--- a/src/app/src/_modules/home/cart/cart.component.html
+++ b/src/app/src/_modules/home/cart/cart.component.html
@@ -77,7 +77,7 @@
                                     </div>
                                 </div>
                                 <div class="price-btn-box">
-                                    <button type="submit" [disabled]='frmOrder.invalid'>Thanh toán</button>
+                                    <button type="submit" >Thanh toán</button>
                                 </div>
                             </div>
                         </div>
