--- a/src/app/src/_modules/home/home-page/home-page.component.html
+++ b/src/app/src/_modules/home/home-page/home-page.component.html
@@ -9,7 +9,7 @@
         #frmSearch=ngForm>
             
                 <input  name="keyWord" type="text" class="form-control"
-                placeholder="Tìm khóa học, giảng viên bạn quan tâm" ngModel required>
+                placeholder="Tìm khóa học bạn quan tâm" ngModel required>
         
                     <button type="submit" class="btn course-btn-search" [disabled]="frmSearch.invalid">
                         <i class="fa fa-search"></i>
