--- a/src/app/src/_modules/admin/admin-duyet/admin-duyet.component.css
+++ b/src/app/src/_modules/admin/admin-duyet/admin-duyet.component.css
@@ -126,16 +126,20 @@ only screen and (max-width: 760px),
 	/*
 	Label the data
 	*/
-	td:nth-of-type(1):before { content: "ID"; }
-	td:nth-of-type(3):before { content: "Tên Khóa Học"; }
+	  td:nth-of-type(1):before { content: "ID"; }
+	  td:nth-of-type(3):before { content: "Tên Khóa Học"; }
     td:nth-of-type(2):before { content: "Tên Giảng Viên"; }
     td:nth-of-type(4):before { content: "Giá Tiền"; }
     td:nth-of-type(5):before { content: "Thao Tác"; }
     /* Second table */
     td.second:nth-of-type(1):before { content: "ID Bài Giảng"; }
-	td.second:nth-of-type(3):before { content: "ID Khóa Học"; }
+	  td.second:nth-of-type(3):before { content: "ID Khóa Học"; }
     td.second:nth-of-type(3):before { content: "Tên Bài Giảng"; }
     td.second:nth-of-type(4):before { content: "Link"; }
     
-	
+    /* TD reject */
+    td.td-reject:nth-of-type(1):before { content: "Tên KH"; }
+	  td.td-reject:nth-of-type(3):before { content: "Tóm tắt"; }
+    td.td-reject:nth-of-type(3):before { content: "Giá Tiền"; }
+    td.td-reject:nth-of-type(4):before { content: "Giảm Giá"; }
 }
