--- a/src/app/src/_modules/admin/admin-duyet/admin-duyet.component.html
+++ b/src/app/src/_modules/admin/admin-duyet/admin-duyet.component.html
@@ -1,3 +1,4 @@
+<h3>Danh Sách Khóa Học Chờ Duyệt</h3>
 <table class="table table-bordered table-responsive-sm table-striped col-md-11 mx-auto" id="dataTable1" width="100%" cellspacing="0">
   <thead class="table-primary">
     <tr>
@@ -19,12 +20,14 @@
       <td>
         <a matButton class="btn btn-secondary mr-2 "(click)='layBaiGiang(khoahoc.BaiGiang)' href="/admin/duyet-khoa-hoc#baiGiang"> Xem Bài Giảng</a>
         <button matButton class="btn btn-primary mr-2 " (click)='duyet(khoahoc.id)'>Duyệt Khóa Học</button>
+        <button matButton class="btn btn-danger mr-2 " (click)='tuChoi(khoahoc.id)'>Từ chối</button>
         
       </td>
 
     </tr>
   </tbody>
 </table>
+
 <hr>
 <h4 id="baiGiang">Bài Giảng: </h4>
 <table class="table table-bordered table-responsive-sm table-striped col-md-11 mx-auto" id="dataTable1" width="100%" cellspacing="0">
@@ -48,3 +51,29 @@
       </tr>
     </tbody>
   </table>
+  <hr>
+<h3>Danh Sách Khóa Học Bị Từ Chối</h3>
+
+<table class="table table-bordered table-responsive-sm table-striped col-md-11 mx-auto" id="dataTable2" width="100%" cellspacing="0">
+  <thead class="table-primary">
+    <tr>
+      <th>Tên Khóa Học</th>
+      <th>Tóm tắt</th>
+      <th>Giá Tiền</th>
+      <th>Giảm Giá</th>
+
+    </tr>
+  </thead>
+
+  <tbody>
+    <tr *ngFor='let khoahoc of danhSachKhoaHocTuChoi'>
+      <td class="td-reject">{{khoahoc.TenKH}}</td>
+      <td class="td-reject">{{khoahoc.TomTat}}</td>
+      <td class="td-reject">{{khoahoc.GiaTien | number:'.0'}} <sup>đ</sup></td>     
+      <td class="td-reject">{{khoahoc.GiamGia}}</td>
+       
+
+    </tr>
+  </tbody>
+</table>
+<hr>
