--- a/src/app/src/_modules/admin/admin-khoahoc/admin-khoahoc.component.css
+++ b/src/app/src/_modules/admin/admin-khoahoc/admin-khoahoc.component.css
@@ -1,16 +1,93 @@
+.preloader {
+    position: absolute;
+display: none;
+background-color: #ffffff;
+left: 0;
+right: 0;
+bottom: 0;
+width: 200px;
+top: 14%;
+height: 176px;
+  }
+  
+  .lds-css.ng-scope {
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+  
+  @keyframes lds-ripple {
+    0% {
+      top: 96px;
+      left: 96px;
+      width: 0;
+      height: 0;
+      opacity: 1;
+    }
+    100% {
+      top: 18px;
+      left: 18px;
+      width: 156px;
+      height: 156px;
+      opacity: 0;
+    }
+  }
+  @-webkit-keyframes lds-ripple {
+    0% {
+      top: 96px;
+      left: 96px;
+      width: 0;
+      height: 0;
+      opacity: 1;
+    }
+    100% {
+      top: 18px;
+      left: 18px;
+      width: 156px;
+      height: 156px;
+      opacity: 0;
+    }
+  }
+  .lds-ripple {
+    position: relative;
+  }
+  
+  .lds-ripple div {
+    -webkit-box-sizing: content-box;
+            box-sizing: content-box;
+    position: absolute;
+    border-width: 4px;
+    border-style: solid;
+    opacity: 1;
+    border-radius: 50%;
+    -webkit-animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+  
+  .lds-ripple div:nth-child(1) {
+    border-color: #eb1436;
+  }
+  
+  .lds-ripple div:nth-child(2) {
+    border-color: #eb1436;
+    -webkit-animation-delay: -0.5s;
+    animation-delay: -0.5s;
+  }
+  
+  .lds-ripple {
+    width: 100px !important;
+    height: 100px !important;
+    -webkit-transform: translate(-50px, -50px) scale(0.5) translate(50px, 50px);
+    transform: translate(-50px, -50px) scale(0.5) translate(50px, 50px);
+  }
 table { 
     width: 100%; 
     border-collapse: collapse; 
   }
   /* Zebra striping */
-  tr:nth-of-type(odd) { 
-    /* background: #eee;  */
-  }
-  th { 
-    /* background: #333; 
-    color: white; 
-    font-weight: bold;  */
-  }
+  
   td, th { 
     padding: 6px; 
     border: 1px solid #ccc; 
