--- a/src/app/src/_modules/mod/mod-create-lecture/mod-create-lecture.component.html
+++ b/src/app/src/_modules/mod/mod-create-lecture/mod-create-lecture.component.html
@@ -1,37 +1,48 @@
 <section class="container-fluid">
-    <div class="row">
-      <div class="col-sm-12 col-md-3 left-col">
-        <div class="text-center">
-          <img src={{hinhAnh}} class="avatar img-circle img-thumbnail" alt="avatar">
-          <h3 class="mt-2">{{name}}</h3>
-  
-        </div><br>
-        <hr>
-        <!--left col-->
-        <div class="navi-box">
-  
-          <ul class="nav flex-column">
-            Quản lý Khóa Học
-            <li><a data-toggle="tab" href="#update">Cập nhật khóa học</a></li>
-            Quản lý Bài Giảng
-            <li><a data-toggle="tab" href="#course" (click)='layBaiGiang()' class="active">Danh Sách Bài Giảng</a></li>
-            <li><a data-toggle="tab" href="#add"> Thêm Bài Giảng</a></li>
-            <li><a data-toggle="tab" href="#updateLec" (click)='layBaiGiang()'> Cập Nhật Bài Giảng</a></li>
-            <hr>
-            <li style="color:red!important;background:none!important;"><a (click)='deleteCourse()'
-                style="color:red!important;background:none!important;"> Xóa khóa học này</a></li>
-  
-          </ul>
+  <div class="row">
+    <div class="col-sm-12 col-md-3 left-col">
+      <div class="text-center" style="position:relative">
+        <div class="preloader" id="preloader">
+          <div class="lds-css ng-scope">
+            <div class="lds-ripple">
+              <div></div>
+              <div></div>
+            </div>
+          </div>
         </div>
-  
-  
-  
-  
+        <img src={{hinhAnh}} class="avatar img-circle img-thumbnail" alt="avatar">
+        <h3 class="mt-2" style="word-wrap: break-word;">{{name}}</h3>
+
+      </div><br>
+      <hr>
+      <!--left col-->
+      <div class="navi-box">
+
+        <ul class="nav flex-column columnL">
+          Quản lý Khóa Học
+          <li><a data-toggle="tab" href="#update">Cập nhật khóa học</a></li>
+          Quản lý Bài Giảng
+          <li><a data-toggle="tab" href="#course" (click)='layBaiGiang()' class="active">Danh Sách Bài Giảng</a></li>
+          <li><a data-toggle="tab" href="#add"> Thêm Bài Giảng</a></li>
+          <li><a data-toggle="tab" href="#updateLec" (click)='layBaiGiang()'> Cập Nhật Bài Giảng</a></li>
+          <hr>
+          <li style="color:red!important;background:none!important;"><a (click)='deleteCourse()'
+              style="color:red!important;background:none!important;"> Xóa khóa học này</a></li>
+
+        </ul>
       </div>
-      <!--/col-3-->
-      <div class="col-sm-12 col-md-9 course-col">
-        <div class="tab-content">
-          <div class="tab-pane " id="add">
+
+
+
+
+    </div>
+    <!--/col-3-->
+    <div class="col-sm-12 col-md-9 course-col">
+      <div class="tab-content">
+        <div class="tab-pane " id="add">
+          <button class="btn btn-chonLoai btn-primary col-md-4 ml-5 mt-5" mat-button  color="primary" (click)='ChonLoai("thucong")'>Thêm thủ công</button>
+          <button class="btn btn-chonLoai btn-secondary col-md-4 ml-5 mt-5" mat-button  color="accent" (click)='ChonLoai("excel")'>Thêm Excel</button>
+          <div class="them-thu-cong" *ngIf='flagThuCong'>
             <div class="pt-4">
               <p class="intruc"><span class='numb'>1</span> Người dùng nhập số lượng bài giảng</p>
               <p class="intruc"><span class='numb'>2</span> Khai báo tên bài giảng(tối thiếu 10 ký tự)</p>
@@ -49,7 +60,7 @@
             </form>
             <hr>
             <form *ngIf='confirmNum' [formGroup]="BaiGiangForm" (ngSubmit)="SaveData()">
-  
+
               <div class="form-group" formArrayName="data"
                 *ngFor="let cd of BaiGiangForm.controls.data.controls;let i=index; ">
                 <div formGroupName={{i}} class="form-group">
@@ -62,7 +73,7 @@
                   </div>
                   <hr>
                   <input type="text" formControlName="MoTa" placeholder="Mô tả" class="form-control"
-                    [ngClass]="{ 'is-invalid': submitted && cd.controls.MoTa.errors }"  minlength="10" />
+                    [ngClass]="{ 'is-invalid': submitted && cd.controls.MoTa.errors }" minlength="10" />
                   <div *ngIf="submitted && cd.controls.MoTa.errors" class="invalid-feedback">
                     <!-- <div *ngIf="cd.controls.MoTa.errors.required">Cần nhập Mô tả</div> -->
                     <div *ngIf="cd.controls.MoTa.errors.minlength">Cần nhập nhiều hơn 10 ký tự</div>
@@ -76,150 +87,189 @@
                   <hr>
                   <label> Học Thử:</label>
                   <input type="radio" formControlName="HocThu" placeholder="Cho phép học thử" class="ml-3"
-                    [ngClass]="{ 'is-invalid': submitted && cd.controls.HocThu.errors }"  value='1' />
-                  
+                    [ngClass]="{ 'is-invalid': submitted && cd.controls.HocThu.errors }" value='1' />
+
                 </div>
               </div>
               <button class="btn-success" mat-button type="submit">Xác nhận</button>
-              
+
             </form>
-  
-  
-  
           </div>
-          <!--/tab-pane-->
-          <div class="tab-pane active" id="course">
-            <div class="row">
-              <h2 class="col-sm-12">Danh Sách Bài Giảng</h2>
-              <div class="card col-sm-3"
-                *ngFor="let myL of courseList | paginate: { itemsPerPage: 3, currentPage: p,id:'foo'}">
-                <!-- <img class="card-img-top" src='' alt="kh1" height="100px" /> -->
-                <div class="card-body">
-                  <div class="card-body_content">
-                    <h4 class="card-title">Tên Bài Giảng: {{myL.TenBaiGiang}}</h4>
-                    <p class="card-text">Mô tả: {{myL.MoTa}}</p>
-                    <div class="price text-center">
-                      <p class="card-text">Đường dẫn: {{myL.EmbededURL}}</p>
-                      <!-- <p class="mb-0">Giá: {{myC.GiaTien | number:'.0'}}<sup>đ</sup>
-                      </p> -->
-  
+          <div class="them-excel" style="position: relative" *ngIf='flagExcel'>
+              <div class="preloaderExcel" id="preloaderExcel">
+                  <div class="lds-css ng-scope">
+                    <div class="lds-ripple">
+                      <div></div>
+                      <div></div>
                     </div>
                   </div>
                 </div>
-              </div>
-  
-              <hr>
-  
-            </div>
-            <div>
-              <pagination-controls id="foo" autoHide="true" responsive="true" previousLabel="Trang trước"
-                nextLabel="Trang Kế" (pageChange)="p = $event">
-              </pagination-controls>
-            </div>
+            <h2>Thêm bài giảng theo hình bên dưới</h2><br>
+            <img src="https://www.khoahocdt.com/hocThu.png" alt="">
+            <br>
+            <input type="file" class="text-center center-block file-upload" name='file'
+              (change)='upExcelBaiGiang($event)'>
           </div>
-          <div class="tab-pane pl-5 pr-5" id="update">
-            <h3 class="text-center">Cập nhật các khóa học</h3>
-            <h4 class="text-center">Thay đổi cái mục bạn muốn thay đổi</h4>
-            <form #frmUpdate='ngForm' (ngSubmit)='update(frmUpdate.value)'>
-              <div class="form-group d-flex">
-                  <mat-form-field class="col-md-6">
-                      <mat-label>Thể loại khóa học bạn chọn là: </mat-label>
-                      <mat-select (selectionChange)="onSelect($event.value)" required>
-                        <mat-option value="0">--Select--</mat-option>
-                        <mat-option *ngFor="let theLoai of danhSachTheLoai" value={{theLoai.id}}>{{theLoai.TenTheLoai}}
-                        </mat-option>
-                      </mat-select>
-                    </mat-form-field>
-                    <br>
-                    
-                    <mat-form-field class="col-md-6">
-        
-                      <mat-label>Nhóm khóa học bạn chọn là: </mat-label>
-                      <mat-select #nhomKH='ngModel' name='MangKH_id' ngModel required >
-                        <mat-option value="0">--Select--</mat-option>
-                        <mat-option *ngFor="let nhomKhoaHoc of danhSachMangKhoaHoc" value={{nhomKhoaHoc.id}}>
-                          {{nhomKhoaHoc.TenMangKH}}</mat-option>
-                      </mat-select>
-                    </mat-form-field>
-                    
-              </div>
-              
-              <div class="form-group">
-                <label>Tên Khóa học mới</label>
-                <input type="text" class="form-control" #tenKH='ngModel' name='TenKH' ngModel minlength="10" placeholder="{{name}}">
-                <div *ngIf='tenKH.errors && (tenKH.touched || tenKH.dirty)'>
-                  <div *ngIf='tenKH.errors.minlength' class="alert alert-danger">
-                    Tên khóa học phải nhiều hơn 10 ký tự
+
+
+
+
+        </div>
+        <!--/tab-pane-->
+        <div class="tab-pane active" id="course">
+          <div class="row">
+            <h2 class="col-sm-12">Danh Sách Bài Giảng</h2>
+            <div class="card col-sm-3"
+              *ngFor="let myL of courseList | paginate: { itemsPerPage: 3, currentPage: p,id:'foo'}">
+              <!-- <img class="card-img-top" src='' alt="kh1" height="100px" /> -->
+              <div class="card-body">
+                <div class="card-body_content">
+                  <h4 class="card-title">Tên Bài Giảng: {{myL.TenBaiGiang}}</h4>
+                  <p class="card-text">Mô tả: {{myL.MoTa}}</p>
+                  <div class="price text-center">
+                    <p class="card-text">Đường dẫn: {{myL.EmbededURL}}</p>
+                    <!-- <p class="mb-0">Giá: {{myC.GiaTien | number:'.0'}}<sup>đ</sup>
+                      </p> -->
+
                   </div>
                 </div>
               </div>
-              <div class="form-group">
-                <label>Mô tả mới</label>
-                <input type="textarea" class="form-control" #mota='ngModel' name='TomTat' ngModel minlength="10" placeholder="{{short}}">
-                <div *ngIf='mota.errors && (mota.touched || mota.dirty)'>
-                  <div *ngIf='mota.errors.minlength' class="alert alert-danger">
-                    Tóm tắt phải nhiều hơn 10 ký tự
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <label>Hình Ảnh</label><br>
-                <input type="file" class="text-center center-block file-upload" name='HinhAnh'
-                  (change)='onFileChange($event)'>
-              </div>
-              <div class="form-group">
-                <label>Giá tiền mới</label>
-                <input type="number" class="form-control" #giaT='ngModel' name='GiaTien' ngModel placeholder="{{price}}">
-              </div>
-              <div class="form-group">
-                <label>Giảm giá %</label>
-                <input type="number" class="form-control" #giamG='ngModel' name='GiamGia' ngModel placeholder="{{giam}}">
-              </div>
-              <button mat-button type="submit" [disabled]='frmUpdate.invalid' class="btn-success">Cập nhật</button>
-            </form>
-  
-  
-  
+            </div>
+
+            <hr>
+
           </div>
-          <div class="tab-pane" id="updateLec">
-            <table class="table table-hover table-responsive-sm">
-              <thead class="thead-light">
-                <tr>
-                  <th>Id</th>
-                  <th>Tiêu đề</th>
-                  <th>Mô tả</th>
-                  <th>Đường dẫn youtube</th>
-                  <th>Thao tác</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor='let myL of courseList'>
-  
-                  <td>{{myL.id}}</td>
-                  <td>
-                    <p>{{myL.TenBaiGiang}}</p>
-                  </td>
-                  <td>
-                    <p>{{myL.MoTa}}</p>
-                  </td>
-                  <td>
-                    <p>{{myL.EmbededURL}}</p>
-                  </td>
-                  <td><button mat-button class='btn-success mr-2' routerLink='update'
-                      [queryParams]='{idL:myL.id,TenBaiGiang:myL.TenBaiGiang,MoTa:myL.MoTa,EmbededURL:myL.EmbededURL}'>Update</button>
-                    <button mat-button class="btn-danger" (click)='delete(myL.id,myL.KhoaHoc_id)'>Xóa</button></td>
-  
-                </tr>
-  
-              </tbody>
-            </table>
-  
-  
-  
+          <div>
+            <pagination-controls id="foo" autoHide="true" responsive="true" previousLabel="Trang trước"
+              nextLabel="Trang Kế" (pageChange)="p = $event">
+            </pagination-controls>
           </div>
         </div>
-  
-        <!--/tab-pane-->
+        <div class="tab-pane pl-5 pr-5" id="update">
+          <h3 class="text-center">Cập nhật khóa học</h3>
+          <h4 class="text-center">Thay đổi cái mục bạn muốn thay đổi</h4>
+          <form [formGroup]='KhoaHocUpdateForm' (ngSubmit)='update(KhoaHocUpdateForm.value)'>
+            <div class="form-group d-flex">
+              <mat-form-field class="col-md-6">
+                <mat-label>Thể loại khóa học bạn chọn là: </mat-label>
+                <mat-select (selectionChange)="onSelect($event.value)" required>
+                  <mat-option value="0">--Select--</mat-option>
+                  <mat-option *ngFor="let theLoai of danhSachTheLoai" value={{theLoai.id}}>{{theLoai.TenTheLoai}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+              <br>
+
+              <mat-form-field class="col-md-6">
+
+                <mat-label>Nhóm khóa học bạn chọn là: </mat-label>
+                <mat-select formControlName='MangKH_id' required>
+                  <mat-option value="0">--Select--</mat-option>
+                  <mat-option *ngFor="let nhomKhoaHoc of danhSachMangKhoaHoc" value={{nhomKhoaHoc.id}}>
+                    {{nhomKhoaHoc.TenMangKH}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+
+            </div>
+
+            <div class="form-group">
+              <label>Tên Khóa học mới</label>
+              <input type="text" class="form-control" formControlName='TenKH' minlength="10" placeholder="{{name}}">
+              <div
+                *ngIf='KhoaHocUpdateForm.controls.TenKH.errors && (KhoaHocUpdateForm.controls.TenKH.touched || KhoaHocUpdateForm.controls.TenKH.dirty)'>
+                <div *ngIf='KhoaHocUpdateForm.controls.TenKH.errors.minlength' class="alert alert-danger">
+                  Tên khóa học phải nhiều hơn 10 ký tự
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+
+              <h2 id="h2lyDo" style="text-align: center;"><strong>L&Yacute; DO BẠN N&Ecirc;N CHỌN KH&Oacute;A HỌC
+                  N&Agrave;Y</strong></h2>
+              <textarea [froalaEditor] formControlName="lydo" required minlength="17"></textarea>
+
+              <div style="width:300px;"
+                *ngIf="KhoaHocUpdateForm.controls.lydo.errors && (KhoaHocUpdateForm.controls.lydo.dirty || KhoaHocUpdateForm.controls.lydo.touched)">
+                <div *ngIf="KhoaHocUpdateForm.controls.lydo.errors.required" class="alert alert-danger">
+                  <p>Không được để rỗng!</p>
+                </div>
+                <div *ngIf="KhoaHocUpdateForm.controls.lydo.errors.minlength" class="alert alert-danger">
+                  <p>Độ dài từ 10 ký tự!</p>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <h2 style="text-align: center;" id="h2ketQua"><strong>KẾT QUẢ ĐẠT ĐƯỢC</strong></h2>
+              <textarea [froalaEditor] formControlName="ketqua" required minlength="17"> {{stringKq}}</textarea>
+              <div style="width:300px;"
+                *ngIf="KhoaHocUpdateForm.controls.ketqua.errors && (KhoaHocUpdateForm.controls.ketqua.dirty || KhoaHocUpdateForm.controls.ketqua.touched)">
+                <div *ngIf="KhoaHocUpdateForm.controls.ketqua.errors.required" class="alert alert-danger">
+                  <p>Không được để rỗng!</p>
+                </div>
+                <div *ngIf="KhoaHocUpdateForm.controls.ketqua.errors.minlength" class="alert alert-danger">
+                  <p>Độ dài từ 10 ký tự</p>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <label>Hình Ảnh</label><br>
+              <input type="file" class="text-center center-block file-upload" name='HinhAnh'
+                (change)='onFileChange($event)'>
+            </div>
+            <div class="form-group">
+              <label>Giá tiền mới</label>
+              <input type="number" class="form-control" formControlName='GiaTien' placeholder="{{price}}">
+            </div>
+            <div class="form-group">
+              <label>Giảm giá %</label>
+              <input type="number" class="form-control" formControlName='GiamGia' placeholder="{{giam}}">
+            </div>
+            <button mat-button type="submit" [disabled]='KhoaHocUpdateForm.invalid' class="btn-success">Cập
+              nhật</button>
+          </form>
+
+
+
+        </div>
+        <div class="tab-pane" id="updateLec">
+          <table class="table table-hover table-responsive-sm">
+            <thead class="thead-light">
+              <tr>
+                <th>Id</th>
+                <th>Tiêu đề</th>
+                <th>Mô tả</th>
+                <th>Đường dẫn youtube</th>
+                <th>Thao tác</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor='let myL of courseList'>
+
+                <td>{{myL.id}}</td>
+                <td>
+                  <p>{{myL.TenBaiGiang}}</p>
+                </td>
+                <td>
+                  <p>{{myL.MoTa}}</p>
+                </td>
+                <td>
+                  <p>{{myL.EmbededURL}}</p>
+                </td>
+                <td><button mat-button class='btn-success mr-2' routerLink='update'
+                    [queryParams]='{idL:myL.id,TenBaiGiang:myL.TenBaiGiang,MoTa:myL.MoTa,EmbededURL:myL.EmbededURL}'>Update</button>
+                  <button mat-button class="btn-danger" (click)='delete(myL.id,myL.KhoaHoc_id)'>Xóa</button></td>
+
+              </tr>
+
+            </tbody>
+          </table>
+
+
+
+        </div>
       </div>
+
+      <!--/tab-pane-->
     </div>
-  </section>
+  </div>
+</section>
