--- a/src/app/src/_modules/mod/mod-detail/mod-detail.component.html
+++ b/src/app/src/_modules/mod/mod-detail/mod-detail.component.html
@@ -11,7 +11,7 @@
           <ul class="nav flex-column">
             <li><a data-toggle="tab" href="#home" class="active">Thông Tin Giảng Viên</a></li>
             <li><a data-toggle="tab" href="#course" (click)='choDuyet()'> Khóa học chờ duyệt</a></li>
-            
+            <li><a data-toggle="tab" href="#reject" (click)='biTuChoi()'> Khóa học bị từ chối</a></li>
   
           </ul>
         </div>
@@ -111,6 +111,36 @@
             </div>
             <div>
               <pagination-controls id="foo" autoHide="true" responsive="true" previousLabel="Trang trước"
+                nextLabel="Trang Kế" (pageChange)="p = $event">
+              </pagination-controls>
+            </div>
+          </div>
+          <div class="tab-pane " id="reject">
+            <div class="row">
+              <h2 class="col-sm-12">Khóa Học Bị Từ Chối</h2>
+              <div class="card col-sm-3"
+                *ngFor="let myC of danhSachBiTuChoi | paginate: { itemsPerPage: 6, currentPage: p,id:'rejectPage'}">
+                <img class="card-img-top" src={{myC.HinhAnh}} alt="kh1" height="100px" />
+                <div class="card-body">
+                  <div class="card-body_content">
+                    <h4 class="card-title">{{myC.TenKH}}</h4>
+                    <p class="card-text">Giảng Viên: {{myC.GiangVien}}</p>
+                    <div class="price text-center">
+  
+                      <p class="mb-0">Giá: {{myC.GiaTien | number:'.0'}}<sup>đ</sup>
+                      </p>
+                      <!-- <a class="btn btn-info" routerLink='../lecture/{{myC.id}}/{{myC.MangKH_id}}'>Quản lý khóa học</a> -->
+  
+                    </div>
+                  </div>
+                </div>
+              </div>
+  
+              <hr>
+  
+            </div>
+            <div>
+              <pagination-controls id="rejectPage" autoHide="true" responsive="true" previousLabel="Trang trước"
                 nextLabel="Trang Kế" (pageChange)="p = $event">
               </pagination-controls>
             </div>
