--- a/src/app/src/_modules/home/course-detail/course-detail.component.html
+++ b/src/app/src/_modules/home/course-detail/course-detail.component.html
@@ -13,8 +13,9 @@
 
                 <br>
                 <a class="btn btn-success btn-start waves-light" mdbWavesEffect
-                    routerLink='../../../learn-continue/{{khoaHocId}}/{{mangKHId}}'*ngIf='checkChuaMua()'  >Bắt đầu học</a>
-                    
+                    routerLink='../../../learn-continue/{{khoaHocId}}/{{mangKHId}}' *ngIf='checkChuaMua()'>Bắt đầu
+                    học</a>
+
             </div>
             <div>
                 <p>Giảng viên: {{giangVien}}</p>
@@ -93,7 +94,7 @@
 
                             </div>
                         </div>
-                        
+
                     </div>
                 </div>
                 <div class="tab-pane" id="main">
@@ -174,18 +175,25 @@
 
                                 <textarea type='text' placeholder="Write your comment here" name="NoiDung" ngModel
                                     #content='ngModel' required minlength="5" id="cmtBox"></textarea>
-
+                                    <div *ngIf="content.errors && (content.dirty || content.touched)">
+                                        <div *ngIf="content.errors.required" class="alert alert-danger">
+                                            <p>Không được để rỗng</p>
+                                        </div>
+                                        <div *ngIf="content.errors.minlength" class="alert alert-danger">
+                                            <p>Tối thiểu 5 ký tự</p>
+                                        </div>
+                                    </div>
                                 <div>
 
                                     <button type="submit" class="btn btn-primary btn-start waves-light"
                                         style="width: 150px;" mdbWavesEffect [disabled]='frmComment.invalid'>Bình luận
-                                        </button>
+                                    </button>
                                 </div>
 
                             </form>
 
                         </li>
-                        
+
                         <br>
                         <br>
                         <br>
@@ -222,11 +230,26 @@
 
                             <form #frmRate='ngForm' (ngSubmit)='rate(frmRate.value)'>
                                 <textarea placeholder="Tiêu đề" name="TieuDe" ngModel #title='ngModel' required
-                                    class="form-control" rows="1" id="rateBox"></textarea>
+                                    class="form-control" rows="1" id="rateBox" minlength="5"></textarea>
+                                <div *ngIf="title.errors && (title.dirty || title.touched)">
+                                    <div *ngIf="title.errors.required" class="alert alert-danger">
+                                        <p>Không được để rỗng</p>
+                                    </div>
+                                    <div *ngIf="title.errors.minlength" class="alert alert-danger">
+                                        <p>Tối thiểu 5 ký tự</p>
+                                    </div>
+                                </div>
                                 <br>
                                 <textarea placeholder="Đánh giá của bạn" name="NoiDung" ngModel #rateBox='ngModel'
                                     required minlength="5" id="rateContent"></textarea>
-
+                                <div *ngIf="rateBox.errors && (rateBox.dirty || rateBox.touched)">
+                                    <div *ngIf="rateBox.errors.required" class="alert alert-danger">
+                                        <p>Không được để rỗng</p>
+                                    </div>
+                                    <div *ngIf="rateBox.errors.minlength" class="alert alert-danger">
+                                        <p>Tối thiểu 5 ký tự</p>
+                                    </div>
+                                </div>
                                 <div>
                                     <span style="float:left">Điểm:</span>
                                     <div class="rate">
@@ -247,7 +270,8 @@
                                         <label for="star1"></label>
                                     </div>
                                     <button type="submit" class="btn btn-primary btn-start waves-light"
-                                        style="width: 150px;" mdbWavesEffect [disabled]='frmRate.invalid'>Đánh Giá</button>
+                                        style="width: 150px;" mdbWavesEffect [disabled]='frmRate.invalid'>Đánh
+                                        Giá</button>
                                 </div>
 
                             </form>
